--- a/src/app/pages/observable/observable.component.html
+++ b/src/app/pages/observable/observable.component.html
@@ -6,40 +6,63 @@
         <code>new Observable(...)</code>
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title> Observable </mat-panel-title>
-      <mat-panel-description>
-        This is a summary of the content
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <button mat-raised-button color="primary">
+      {{ observable$ | async }}
+    </button>
   </mat-expansion-panel>
 
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title> Interval </mat-panel-title>
       <mat-panel-description>
-        This is a summary of the content
+        <code>interval(3000)</code>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <div class="result-container">
-      <div class="result" *ngFor="let result of intervalResult">
+      <button
+        mat-raised-button
+        color="primary"
+        *ngFor="let result of intervalResult"
+      >
         {{ result }}
-      </div>
+      </button>
     </div>
   </mat-expansion-panel>
 
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-title> Observable </mat-panel-title>
+      <mat-panel-title> FromEvent </mat-panel-title>
       <mat-panel-description>
-        This is a summary of the content
+        <code>fromEvent(document, 'click')</code>
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <button mat-raised-button color="primary">
+      {{ source$ | async }}
+    </button>
   </mat-expansion-panel>
 </mat-accordion>
+
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title> Hot vs Cold </mat-panel-title>
+  </mat-expansion-panel-header>
+  <div class="result-container">
+    <div>
+      <button mat-raised-button color="primary">
+        HOT: {{ source$ | async }}
+      </button>
+      <button mat-raised-button color="primary">
+        HOT {{ source$ | async }}
+      </button>
+    </div>
+    <div>
+      <button mat-raised-button color="primary">
+        COLD: {{ observable$ | async }}
+      </button>
+
+      <button mat-raised-button color="primary">
+        COLD: {{ observable$ | async }}
+      </button>
+    </div>
+  </div>
+</mat-expansion-panel>
