--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Rxjs</span>
+  <span>RXJS</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
