--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,9 @@
         <mat-list-item [routerLink]="['subject']" role="listitem"
           >Subject</mat-list-item
         >
-        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-list-item [routerLink]="['creation-operators']" role="listitem"
+          >Creation operators</mat-list-item
+        >
       </mat-nav-list>
     </div></mat-sidenav
   >
