--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,10 @@
         <mat-list-item [routerLink]="['creation-operators']" role="listitem"
           >Creation operators</mat-list-item
         >
+
+        <mat-list-item [routerLink]="['filtering-operators']" role="listitem"
+          >Filtering operators</mat-list-item
+        >
       </mat-nav-list>
     </div></mat-sidenav
   >
