--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>RXJS</span>
+  <span>Rxjs playground</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
@@ -35,6 +35,16 @@
 
         <mat-list-item [routerLink]="['filtering-operators']" role="listitem"
           >Filtering operators</mat-list-item
+        >
+
+        <mat-list-item [routerLink]="['combination-operators']" role="listitem"
+          >Combination operators</mat-list-item
+        >
+
+        <mat-list-item
+          [routerLink]="['transformation-operators']"
+          role="listitem"
+          >Transformation operators</mat-list-item
         >
       </mat-nav-list>
     </div></mat-sidenav
