--- a/src/app/pages/utility-operators-page/utility-operators-page.component.html
+++ b/src/app/pages/utility-operators-page/utility-operators-page.component.html
@@ -1,1 +1,25 @@
-<p>utility-operators-page works!</p>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title> combineLatest </mat-panel-title>
+      <mat-panel-description>
+        <code> combineLatest(obs1, obs2)</code>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div>
+      <div>
+        <button
+          (click)="tapSubjectA$.next(true)"
+          mat-raised-button
+          color="primary"
+        >
+          Publish new A
+        </button>
+        Observable A: {{ obsA$ | async }}
+        <div>
+          <span *ngFor="let value of obsAResult">[{{ value }}]</span>
+        </div>
+      </div>
+    </div>
+  </mat-expansion-panel>
+</mat-accordion>
