--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
         <mat-list-item
           [routerLink]="['catching-errors-operators']"
           role="listitem"
-          >Catching erros operators</mat-list-item
+          >Catching errors operators</mat-list-item
         >
       </mat-nav-list>
     </div></mat-sidenav
