--- a/src/app/pages/utility-operators-page/utility-operators-page.component.html
+++ b/src/app/pages/utility-operators-page/utility-operators-page.component.html
@@ -1,9 +1,9 @@
 <mat-accordion>
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-title> combineLatest </mat-panel-title>
+      <mat-panel-title> Tap </mat-panel-title>
       <mat-panel-description>
-        <code> combineLatest(obs1, obs2)</code>
+        <code> tap(->func)</code>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <div>
