--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,6 +60,9 @@
           role="listitem"
           >Catching errors operators</mat-list-item
         >
+        <mat-list-item [routerLink]="['users']" role="listitem"
+          >Users</mat-list-item
+        >
       </mat-nav-list>
     </div></mat-sidenav
   >
