--- a/src/app/pages/users-list-page/users-list-page.component.html
+++ b/src/app/pages/users-list-page/users-list-page.component.html
@@ -1,1 +1,32 @@
-<p>users-list-page works!</p>
+<table mat-table [dataSource]="users$ | async" class="mat-elevation-z8 w-100">
+  <ng-container matColumnDef="first_name">
+    <th mat-header-cell *matHeaderCellDef>First name</th>
+    <td mat-cell *matCellDef="let element">{{ element.first_name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="last_name">
+    <th mat-header-cell *matHeaderCellDef>Last name</th>
+    <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<ng-container *ngIf="selectedPage$ | async as selectedPage">
+  <button
+    [disabled]="selectedPage === 1"
+    (click)="changePage(selectedPage - 1)"
+    mat-raised-button
+    color="primary"
+  >
+    Previous page
+  </button>
+
+  <button
+    (click)="changePage(selectedPage + 1)"
+    mat-raised-button
+    color="primary"
+    [disabled]="(totalPages$ | async) === selectedPage"
+  >
+    Next page
+  </button>
+</ng-container>
