--- a/src/app/pages/users-list-page/users-list-page.component.html
+++ b/src/app/pages/users-list-page/users-list-page.component.html
@@ -8,6 +8,15 @@
     <th mat-header-cell *matHeaderCellDef>Last name</th>
     <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
   </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-mini-fab (click)="navigateToDetailsClick(element.id)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
+  </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
